Smaller image assets

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -14,7 +14,7 @@ p {
 
 // Red circle image around text
 .encircle {
-    background: url(~"../img/circle-highlight.png");
+    background: url(~"../img/circle-highlight.gif");
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: center;
