Hide SoMe buttons for now since we have no SoMe presence

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -12,6 +12,11 @@ p {
     letter-spacing: 4px;
 }
 
+.footer-logo {
+    float:right;
+    margin: 10px;
+}
+
 // Red circle image around text
 .encircle {
     background: url(~"../img/circle-highlight.gif");
@@ -35,6 +40,10 @@ p {
 
 .services-icon {
     height: 130px;
+}
+
+.btn-contactus {
+    margin: 0 !important;
 }
 
 .square-button {
