--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -61,6 +61,10 @@ p {
     padding-bottom: 20px;
 }
 
+#footer .widget address {
+    margin-bottom: 0;
+}
+
 .dropdown-menu {
     background-color: @color-secondary !important;
 }
