--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -1,9 +1,9 @@
+@color-secondary:           #001f58;
+
 p {
     font-size: 18px;
 }
 
-// Verso Colors
-@color-secondary: #001F58;
 // SLIDER TEXTS
 .slider-text-1 {
     font-size: 36px;
@@ -81,6 +81,28 @@ p {
     height: 50px;
 }
 
-section.services h5 {
+img.team-member {
+    width: 130px;
+    height: 130px;
+}
+
+.team h3,
+.services h3 {
+    font-size: 15px;
+    line-height: 28px;
+    padding-top: 2px;
+    margin-bottom: 10px;
+    letter-spacing: 0;
+    line-height: 24px;
     padding-top: 20px;
+    margin-bottom: 13px;
+}
+
+.section.team {
+    h3 {
+        margin-bottom: 0px;
+    }
+    .team-title {
+        line-height: 1em;
+    }
 }
