--- a/src/less/variable.less
+++ b/src/less/variable.less
@@ -1,40 +1,40 @@
 // COLORS
+@color-master:              #676767;
+@color-master-light:        #e6e6e6;
+@color-secondary:           #001f58;
 
-@color-master:				#676767;
-@color-master-light:		#e6e6e6;
+@color-black:               #212121;
+@color-white:               #ffffff;
+@color-grey:                #eeedee;
 
-@color-black: 				#212121;
-@color-white: 				#ffffff;
-@color-grey:				#eeedee;
+@color-complete:            #48b0f7;
+@color-success:             #4caf50;
+@color-info:                #2196f3;
+@color-warning:             #f57c00;
+@color-danger:              #f44336;
+@color-primary:             #ffae00;
+@color-secondary:           #2790B0;
 
-@color-complete: 			#48b0f7;
-@color-success: 			#4caf50;
-@color-info: 				#2196f3;
-@color-warning: 			#f57c00;
-@color-danger: 				#f44336;
-@color-primary: 			#ffae00;
-@color-secondary:			#2790B0;
+@link-color:                @color-secondary;
+@link-hover-color:          darken(@link-color, 10%);
 
-@link-color:				@color-primary;
-@link-hover-color:			darken(@color-primary, 10%);
+@general-background:        #FFF;
+@body-background:           #FFF;
 
-@general-background:		#FFF;
-@body-background: #FFF;
+@base-font:                 "Raleway";
+@heading-font:              "Raleway";
+@alt-font:                  "Roboto Slab";
 
-@base-font:	"Raleway";
-@heading-font: "Raleway";
-@alt-font: "Roboto Slab";
+@header-height:             100px;
+@sticky-height:             60px;
 
-@header-height: 			100px;
-@sticky-height:				60px;
-
-@header-background: 		#fff;
-@header-sticky-background:	#FFF;
-@header-transparent:		0%;
+@header-background:         #fff;
+@header-sticky-background:  #FFF;
+@header-transparent:        0%;
 
 
 // SECTION
-@section-padding:			95px;
+@section-padding:           95px;
 
 // FOOTER BACKGROUND
-@footer-background:			#232323;
+@footer-background:         @color-secondary;
