--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -32,7 +32,7 @@ p {
 
 // Who we are icon
 .who_we_are {
-    height: 300px;
+    max-height: 300px;
     display: block;
     margin-left: auto;
     margin-right: auto
