Fix menu waypoints

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -1,5 +1,9 @@
 @color-secondary:           #001f58;
 
+#header.sticky .menu ul li a.active, #header.sticky .menu-toggle {
+    color: #ffae00 !important;
+}
+
 p {
     font-size: 18px;
 }
@@ -106,3 +110,7 @@ img.team-member {
         line-height: 1em;
     }
 }
+.ourservices-intro {
+    padding: @section-padding 20px;
+}
+
