--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -110,7 +110,23 @@ img.team-member {
         line-height: 1em;
     }
 }
-.ourservices-intro {
+.section-intro {
     padding: @section-padding 20px;
 }
 
+.subtitle {
+    line-height: 1em;
+    font-size: 15px;
+}
+
+
+#ourwork {
+    .client {
+        padding-top: 20px;
+        padding-bottom: 40px;
+
+        img.logo {
+            max-height: 200px;
+        }
+    }
+}
