Clean up portfolio section

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -129,4 +129,10 @@ img.team-member {
             max-height: 200px;
         }
     }
+
+    .container-wallofsport {
+        width: 100%;
+        background-color: #3B62A3;
+        color: #fff;
+    }
 }
