Fix header in safari

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -1,7 +1,14 @@
 @color-secondary:           #001f58;
 
-#header.sticky .menu ul li a.active, #header.sticky .menu-toggle {
-    color: #ffae00 !important;
+#header {
+    .logo img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .sticky .menu ul li a.active, .sticky .menu-toggle {
+        color: #ffae00 !important;
+    }
 }
 
 p {
